--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 root: /
 permalink: /:year-:month/:title/
 markdown: rdiscount
-highlighter: true
+highlighter: pygments
 paginate: 5
 title: HackerMi's Blog
 description: HakcerMi's Tech & Life 
