add rss feature
Signed-off-by: HackerMi <wawi1985@163.com>

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ description: HakcerMi's Tech & Life
 keywords: HackerMi
 url: http://www.hackermi.com
 favicon: http://www.hackermi.com/static/favicon.ico
+feed: /atom.xml
 
 #Author config
 author:
