change google adsense to config mode and disable it
Signed-off-by: HackerMi <wawi1985@163.com>

--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,13 @@ url: http://www.hackermi.com
 favicon: http://www.hackermi.com/static/favicon.ico
 feed: /atom.xml
 
+
 #Author config
 author:
   name: HackerMi
   email: hackermi@163.com
 
+#Google Config
+google:
+  adsense_config: false
 
