--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #Site config
 root: /
 permalink: /:year-:month/:title/
-markdown: rdiscount
+markdown: kramdown
 highlighter: pygments
 paginate: 10
 title: HackerMi's Blog
