--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 root: /
 permalink: /:year-:month/:title/
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 paginate: 10
 title: HackerMi's Blog
 description: HakcerMi's Tech & Life 
